# Gateway

./: .gitignore  .gitmodules  CMakeLists.txt  Structure.md  gateway.yaml
include/config/: gateway.yaml
include/core/: GatewayConnection.h  GatewayServer.h  IdleManager.h
include/gateway/core/: GatewayConnection.h  GatewayServer.h
include/gateway/network/protocol/: Packet.h  PacketParser.h
include/gateway/proxy/: BackendPool.h
include/limit/: RateLimiter.h
include/network/buffer/: RecvBuffer.h
include/network/protocol/: PacketParser.h
include/proxy/: BackendConnection.h  BackendPool.h  ProxyService.h
include/router/: MessageRouter.h  Router.h  ShardManager.h
include/session/: RequestManager.h
logs/: server_log_2026-03-21.txt
src/: main.cpp
src/core/: GatewayConnection.cpp  GatewayServer.cpp  IdleManager.cpp
src/limit/: RateLimiter.cpp
src/network/buffer/: RecvBuffer.cpp
src/network/protocol/: Packet.cpp  PacketParser.cpp
src/proxy/: BackendConnection.cpp  BackendPool.cpp  ProxyService.cpp
src/router/: MessageRouter.cpp  ShardManager.cpp
src/session/: RequestManager.cpp
